--- a/MVC/myapp/views/home/login.ejs
+++ b/MVC/myapp/views/home/login.ejs
@@ -4,15 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <script src="/javascripts/jquery.js"></script>
     <script src="/javascripts/login.js" defer></script>
   </head>
   <body>
-    <form action="/login" method="POST">
+    <form action="/login" method="POST" id="loginForm">
       <input type="id" name="id" placeholder="id" />
       <br />
       <input type="password" name="password" placeholder="password" />
       <input type="submit" value="submit" />
     </form>
     <a href="/">Go home</a>
+    <script></script>
   </body>
 </html>
