--- a/MVC/myapp/views/home/register.ejs
+++ b/MVC/myapp/views/home/register.ejs
@@ -5,23 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script src="/javascripts/jquery.js"></script>
-    <script src="/javascripts/login.js" defer></script>
+    <script src="/javascripts/register.js" defer></script>
     <link rel="stylesheet" href="/stylesheets/login.css" />
   </head>
   <body>
     <div class="login-page">
       <div class="form">
-        <form class="login-form" action="/login" id="loginForm">
-          <input type="text" placeholder="username" name="id" id="id" />
+        <form class="login-form" action="/register" id="registerForm">
+          <input type="text" placeholder="username" name="name" />
+          <input type="text" placeholder="id" name="id" />
+          <input type="password" placeholder="password" name="password" />
           <input
             type="password"
             placeholder="password"
-            name="password"
-            id="password"
+            name="confirm-password"
           />
-          <input type="submit" value="sign in" />
+          <input type="submit" value="sign up" />
           <p class="message">
-            Not registered? <a href="/register">Create an account</a>
+            Already registered? <a href="/login">Sign In</a>
           </p>
         </form>
       </div>
